deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-backend-api
  labels:
    app: sample-app-backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app-backend-api
  template:
    metadata:
      labels:
        app: sample-app-backend-api
    spec:
      containers:
      - image: ${ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/sample-app-backend-api:1.1
        command: ["./main"]
        name: sample-app-backend-api
        ports:
        - containerPort: 9090
          name: http-port02

---

kind: Service
apiVersion: v1
metadata:
  name: sample-app-backend-api
  labels:
    app: sample-app-backend-api
spec:
  selector:
    app: sample-app-backend-api
  type: ClusterIP
  ports:
  - name: port02
    port: 9090
    targetPort: 9090

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-app-backend-api-vs
spec:
  hosts:
  - "*"
  gateways:
  - saas-gateway
  http:
  - match:
    - uri:
        exact: /accountMgmt
    - uri:
        prefix: /accountMgmt/
    route:
    - destination:
        host: sample-app-backend-api
        port:
          number: 9090
    corsPolicy:
      allowOrigins:
      - exact: "*"
      allowMethods:
      - PUT
      - GET
      - OPTIONS
      - POST
      allowHeaders:
      - X-Custom-Header
      - content-type
      - authorization
      - Access-Control-Allow-Origin
      - Access-Control-Allow-Methods
      - Access-Control-Allow-Headers
      exposeHeaders:
      - X-Expose-Header
      maxAge: 24h
      allowCredentials: true
